fix: fix users path
