# src/routes/v1/index.ts
@@ -1,14 +1,14 @@
 import { Router } from 'express';
 import testRouter from './test';
-import userRouter from './user';
+import usersRouter from './users';
 
 const v1Router = Router();
 
 // /v1/testのルート
 v1Router.use('/test', testRouter);
 
-// /v1/userのルート
-v1Router.use('/user', userRouter);
+// /v1/usersのルート
+v1Router.use('/users', usersRouter);
 
 v1Router.use((req, res, next) => {
   res.status(404).end();
